# gentroid.system-core

./: CMakeLists.txt
include/cutils/: atomic-gcc.h  atomic.h  memory.h  properties.h
include/utils/: SysDirs.h
libbacktrace/: CMakeLists.txt  UnwindMap.cpp
libcutils/: CMakeLists.txt  memory.c  properties.c
liblog/: CMakeLists.txt  log_read.c
libnativebridge/: CMakeLists.txt
libsparse/: CMakeLists.txt
libutils/: CMakeLists.txt  SysDirs.cpp
libziparchive/: CMakeLists.txt  zip_archive.cc
libzipfile/: CMakeLists.txt
